# Kubi

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  kubi.md  model.md  opceanai.md
config/searxng/: settings.yml
kubi-ai/: Dockerfile  requirements.txt
kubi-ai/src/: main.py
kubi-ai/src/crawl/: crawler.py
kubi-ai/src/embeddings/: embedder.py
kubi-ai/src/expand/: expander.py
kubi-ai/src/llm/: llm_service.py  providers.py  router.py
kubi-ai/src/models/: schemas.py
kubi-ai/src/rank/: reranker.py
kubi-ai/src/search/: ddg_search.py  searxng_search.py
kubi-ai/src/similar/: similar_service.py
kubi-api/: Dockerfile  package.json  tsconfig.json
kubi-api/src/: index.ts
kubi-api/src/lib/: client.ts
kubi-api/src/middleware/: auth.ts  rateLimit.ts
kubi-api/src/routes/: ask.ts  chat.ts  contents.ts  crawl.ts  embed.ts  expand.ts  presets.ts  providers.ts  research.ts  search.ts  similar.ts  stream.ts
kubi-core/: Cargo.toml  Dockerfile
kubi-core/src/: main.rs
kubi-core/src/cache/: mod.rs
kubi-core/src/models/: mod.rs
kubi-core/src/ranking/: mod.rs
kubi-core/src/routes/: answer.rs  crawl.rs  embed.rs  expand.rs  health.rs  mod.rs  rank.rs  search.rs  similar.rs  stream.rs
kubi-core/src/search/: mod.rs
kubi-core/src/streaming/: mod.rs
kubi-mcp/: Dockerfile  package.json
kubi-mcp/src/: index.ts
